sqlite/conformance/sqlite-sqltests/snapshot_tests/modifications/snapshots/modifications__delete-with-subquery.snap
---
source: modifications.sqltest
expression: |-
  DELETE FROM orders
      WHERE user_id IN (
          SELECT id FROM users WHERE status = 'inactive'
      );
info:
  statement_type: DELETE
  tables:
  - orders
  - users
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--LIST SUBQUERY 1
|  `--SCAN users
`--SEARCH orders USING INDEX idx_orders_user_id (user_id=?)

BYTECODE
addr  opcode            p1  p2  p3  p4            p5  comment
   0  Init               0  43   0                 0  Start at 43
   1  OpenWrite          1   5   0                 0  root=5; iDb=0
   2  OpenWrite          2  13   0                 0  root=13; iDb=0
   3  OpenWrite          3  12   0                 0  root=12; iDb=0
   4  Null               0   1   0                 0  r[1]=NULL
   5  Once              15   0   0                 0  goto 15
   6  OpenEphemeral      0   0   0                 0  cursor=0 is_table=false
   7  OpenRead           4   3   0  k(4,B,B,B,B)   0  table=users, root=3, iDb=0
   8  Rewind             4  15   0                 0  Rewind table users
   9    Column           4   3   4  active         0  r[4]=users.status
  10    Ne               4   5  14  Binary         0  if r[4]!=r[5] goto 14
  11    RowId            4   2   0                 0  r[2]=users.rowid
  12    MakeRecord       2   1   6                 0  r[6]=mkrec(r[2..2]); for ephemeral_index_where_sub_t2
  13    IdxInsert        0   6   0                 8  key=r[6]
  14  Next               4   9   0                 0
  15  OpenRead           3  12   0  k(2,B)         0  index=idx_orders_user_id, root=12, iDb=0
  16  NullRow            0   0   0                 0  Set cursor 0 to a (pseudo) NULL row
  17  Rewind             0  27   0                 0  Rewind  ephemeral(ephemeral_index_where_sub_t2)
  18    Column           0   0   8                 0  r[8]=ephemeral(ephemeral_index_where_sub_t2).id
  19    IsNull           8  26   0                 0  if (r[8]==NULL) goto 26
  20    SeekGE           3  26   8                 0  key=[8..8]
  21      IdxGT          3  26   8                 0  key=[8..8]
  22      DeferredSeek   3   1   0                 0
  23      IdxRowId       3   7   0                 0  r[7]=cursor 3 for index idx_orders_user_id.rowid
  24      RowSetAdd      1   7   0                 0
  25    Next             3  21   0                 0
  26  Next               0  18   0                 0
  27  Close              1   0   0                 0
  28  OpenWrite          1   5   0                 0  root=5; iDb=0
  29  OpenWrite          5  13   0                 0  root=13; iDb=0
  30  OpenWrite          6  12   0                 0  root=12; iDb=0
  31    RowSetRead       1  42   9                 0
  32    NotExists        1  31   9                 0
  33    NotExists        1  31   9                 0
  34    Column           1   2  10                 0  r[10]=orders.product_id
  35    RowId            1  11   0                 0  r[11]=orders.rowid
  36    IdxDelete        2  10   2                 1
  37    Column           1   1  12                 0  r[12]=orders.user_id
  38    RowId            1  13   0                 0  r[13]=orders.rowid
  39    IdxDelete        3  12   2                 1
  40    Delete           1   0   0  orders         0
  41  Goto               0  31   0                 0
  42  Halt               0   0   0                 0
  43  Transaction        0   2  10                 0  iDb=0 tx_mode=Write
  44  String8            0   5   0  inactive       0  r[5]='inactive'
  45  Goto               0   1   0                 0
