sqlite/conformance/sqlite-sqltests/snapshot_tests/modifications/snapshots/modifications__insert-or-abort-multi-unique.snap
---
source: modifications.sqltest
expression: |-
  INSERT OR ABORT INTO items (id, sku, barcode, name)
      VALUES (1, 'SKU-001', 'BC-001', 'Widget');
info:
  statement_type: INSERT
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN


BYTECODE
addr  opcode         p1  p2  p3  p4             p5  comment
   0  Init            0  42   0                  0  Start at 42
   1  OpenWrite       2   8   0                  0  root=8; iDb=0
   2  Integer         1   2   0                  0  r[2]=1
   3  SoftNull        3   0   0                  0
   4  String8         0   4   0  SKU-001         0  r[4]='SKU-001'
   5  String8         0   5   0  BC-001          0  r[5]='BC-001'
   6  String8         0   6   0  Widget          0  r[6]='Widget'
   7  OpenWrite       0  10   0                  0  root=10; iDb=0
   8  OpenWrite       1   9   0                  0  root=9; iDb=0
   9  Affinity        3   4   0                  0  r[3..7] = D, B, B, B
  10  NotNull         2  12   0                  0  r[2]!=NULL -> goto 12
  11  Goto            0  14   0                  0
  12  MustBeInt       2   0   0                  0
  13  Goto            0  15   0                  0
  14  NewRowid        2   2   0                  0  r[2]=rowid
  15  HaltIfNull   1299   0   4  items.sku       0
  16  HaltIfNull   1299   0   5  items.barcode   0
  17  NotExists       2  19   2                  0
  18  Halt         1555   0   0  items.id        0
  19  Copy            5   8   0                  0  r[8]=r[5]
  20  Copy            2   9   0                  0  r[9]=r[2]
  21  Affinity        8   1   0                  0  r[8..9] = B
  22  NoConflict      0  24   8  1               0  key=r[8..8]
  23  Halt         2067   0   0  items.barcode   0
  24  Copy            4  10   0                  0  r[10]=r[4]
  25  Copy            2  11   0                  0  r[11]=r[2]
  26  Affinity       10   1   0                  0  r[10..11] = B
  27  NoConflict      1  29  10  1               0  key=r[10..10]
  28  Halt         2067   0   0  items.sku       0
  29  MakeRecord      3   4   7                  0  r[7]=mkrec(r[3..6])
  30  Copy            5  12   0                  0  r[12]=r[5]
  31  Copy            2  13   0                  0  r[13]=r[2]
  32  MakeRecord     12   2  14                  0  r[14]=mkrec(r[12..13]); for sqlite_autoindex_items_2
  33  IdxInsert       0  14  12                  6  key=r[14]
  34  Copy            4  15   0                  0  r[15]=r[4]
  35  Copy            2  16   0                  0  r[16]=r[2]
  36  MakeRecord     15   2  17                  0  r[17]=mkrec(r[15..16]); for sqlite_autoindex_items_1
  37  IdxInsert       1  17  15                  6  key=r[17]
  38  Insert          2   7   2  items           0  intkey=r[2] data=r[7]
  39  Goto            0  40   0                  0
  40  Goto            0  41   0                  0
  41  Halt            0   0   0                  0
  42  Transaction     0   2  10                  0  iDb=0 tx_mode=Write
  43  Goto            0   1   0                  0
