sqlite/conformance/sqlite-sqltests/snapshot_tests/modifications/snapshots/modifications__insert-or-ignore-multi-unique.snap
---
source: modifications.sqltest
expression: |-
  INSERT OR IGNORE INTO items (id, sku, barcode, name)
      VALUES (1, 'SKU-001', 'BC-001', 'Widget');
info:
  statement_type: INSERT
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN


BYTECODE
addr  opcode         p1  p2  p3  p4             p5  comment
   0  Init            0  42   0                  0  Start at 42
   1  OpenWrite       2   8   0                  0  root=8; iDb=0
   2  Integer         1   2   0                  0  r[2]=1
   3  SoftNull        3   0   0                  0
   4  String8         0   4   0  SKU-001         0  r[4]='SKU-001'
   5  String8         0   5   0  BC-001          0  r[5]='BC-001'
   6  String8         0   6   0  Widget          0  r[6]='Widget'
   7  OpenWrite       0  10   0                  0  root=10; iDb=0
   8  OpenWrite       1   9   0                  0  root=9; iDb=0
   9  Affinity        3   4   0                  0  r[3..7] = D, B, B, B
  10  NotNull         2  12   0                  0  r[2]!=NULL -> goto 12
  11  Goto            0  14   0                  0
  12  MustBeInt       2   0   0                  0
  13  Goto            0  15   0                  0
  14  NewRowid        2   2   0                  0  r[2]=rowid
  15  IsNull          4  40   0                  0  if (r[4]==NULL) goto 40
  16  IsNull          5  40   0                  0  if (r[5]==NULL) goto 40
  17  NotExists       2  20   2                  0
  18  Copy            2   1   0                  0  r[1]=r[2]
  19  Goto            0  39   0                  0
  20  Copy            5   8   0                  0  r[8]=r[5]
  21  Copy            2   9   0                  0  r[9]=r[2]
  22  Affinity        8   1   0                  0  r[8..9] = B
  23  NoConflict      0  26   8  1               0  key=r[8..8]
  24  Goto            0  40   0                  0
  25  Halt         2067   0   0  items.barcode   0
  26  Copy            4  10   0                  0  r[10]=r[4]
  27  Copy            2  11   0                  0  r[11]=r[2]
  28  Affinity       10   1   0                  0  r[10..11] = B
  29  NoConflict      1  32  10  1               0  key=r[10..10]
  30  Goto            0  40   0                  0
  31  Halt         2067   0   0  items.sku       0
  32  MakeRecord      3   4   7                  0  r[7]=mkrec(r[3..6])
  33  MakeRecord      8   2  12                  0  r[12]=mkrec(r[8..9]); for sqlite_autoindex_items_2
  34  IdxInsert       0  12   8                  6  key=r[12]
  35  MakeRecord     10   2  13                  0  r[13]=mkrec(r[10..11]); for sqlite_autoindex_items_1
  36  IdxInsert       1  13  10                  6  key=r[13]
  37  Insert          2   7   2  items           0  intkey=r[2] data=r[7]
  38  Goto            0  40   0                  0
  39  Goto            0  40   0                  0
  40  Goto            0  41   0                  0
  41  Halt            0   0   0                  0
  42  Transaction     0   2  10                  0  iDb=0 tx_mode=Write
  43  Goto            0   1   0                  0
