sqlite/conformance/sqlite-sqltests/snapshot_tests/modifications/snapshots/modifications__insert-or-ignore.snap
---
source: modifications.sqltest
expression: |-
  INSERT OR IGNORE INTO users (id, email, name, status)
      VALUES (1, 'jane@example.com', 'Jane Doe', 'active');
info:
  statement_type: INSERT
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN


BYTECODE
addr  opcode         p1  p2  p3  p4                p5  comment
   0  Init            0  33   0                     0  Start at 33
   1  OpenWrite       1   3   0                     0  root=3; iDb=0
   2  Integer         1   2   0                     0  r[2]=1
   3  SoftNull        3   0   0                     0
   4  String8         0   4   0  jane@example.com   0  r[4]='jane@example.com'
   5  String8         0   5   0  Jane Doe           0  r[5]='Jane Doe'
   6  String8         0   6   0  active             0  r[6]='active'
   7  OpenWrite       0   4   0                     0  root=4; iDb=0
   8  Affinity        3   4   0                     0  r[3..7] = D, B, B, B
   9  NotNull         2  11   0                     0  r[2]!=NULL -> goto 11
  10  Goto            0  13   0                     0
  11  MustBeInt       2   0   0                     0
  12  Goto            0  14   0                     0
  13  NewRowid        1   2   0                     0  r[2]=rowid
  14  IsNull          4  31   0                     0  if (r[4]==NULL) goto 31
  15  IsNull          5  31   0                     0  if (r[5]==NULL) goto 31
  16  NotExists       1  19   2                     0
  17  Copy            2   1   0                     0  r[1]=r[2]
  18  Goto            0  30   0                     0
  19  Copy            4   8   0                     0  r[8]=r[4]
  20  Copy            2   9   0                     0  r[9]=r[2]
  21  Affinity        8   1   0                     0  r[8..9] = B
  22  NoConflict      0  25   8  1                  0  key=r[8..8]
  23  Goto            0  31   0                     0
  24  Halt         2067   0   0  users.email        0
  25  MakeRecord      3   4   7                     0  r[7]=mkrec(r[3..6])
  26  MakeRecord      8   2  10                     0  r[10]=mkrec(r[8..9]); for sqlite_autoindex_users_1
  27  IdxInsert       0  10   8                     6  key=r[10]
  28  Insert          1   7   2  users              0  intkey=r[2] data=r[7]
  29  Goto            0  31   0                     0
  30  Goto            0  31   0                     0
  31  Goto            0  32   0                     0
  32  Halt            0   0   0                     0
  33  Transaction     0   2  10                     0  iDb=0 tx_mode=Write
  34  Goto            0   1   0                     0
