sqlite/conformance/sqlite-sqltests/snapshot_tests/modifications/snapshots/modifications__insert-or-replace-multi-notnull-default-partial.snap
---
source: modifications.sqltest
expression: INSERT OR REPLACE INTO t_defaults(id, val) VALUES (1, 100);
info:
  statement_type: INSERT
  setup_blocks:
  - notnull_defaults
  database: ':memory:'
---
QUERY PLAN


BYTECODE
addr  opcode         p1  p2  p3  p4               p5  comment
   0  Init            0  29   0                    0  Start at 29
   1  OpenWrite       0   2   0                    0  root=2; iDb=0
   2  Integer         1   2   0                    0  r[2]=1
   3  SoftNull        3   0   0                    0
   4  Integer       100   4   0                    0  r[4]=100
   5  Affinity        3   3   0                    0  r[3..6] = D, D, B
   6  NotNull         2   8   0                    0  r[2]!=NULL -> goto 8
   7  Goto            0  10   0                    0
   8  MustBeInt       2   0   0                    0
   9  Goto            0  11   0                    0
  10  NewRowid        0   2   0                    0  r[2]=rowid
  11  NotNull         4  14   0                    0  r[4]!=NULL -> goto 14
  12  Integer        42   4   0                    0  r[4]=42
  13  Affinity        4   1   0                    0  r[4..5] = D
  14  HaltIfNull   1299   0   4  t_defaults.val    0
  15  NotNull         5  18   0                    0  r[5]!=NULL -> goto 18
  16  String8         0   5   0  unnamed           0  r[5]='unnamed'
  17  Affinity        5   1   0                    0  r[5..6] = B
  18  HaltIfNull   1299   0   5  t_defaults.name   0
  19  NotExists       0  24   2                    0
  20  Copy            2   1   0                    0  r[1]=r[2]
  21  SeekRowid       0   1  28                    0  if (r[1]!=cursor 0 for table t_defaults.rowid) goto 28
  22  Delete          0   0   0  t_defaults        0
  23  Goto            0  24   0                    0
  24  MakeRecord      3   3   6                    0  r[6]=mkrec(r[3..5])
  25  Insert          0   6   2  t_defaults       66  intkey=r[2] data=r[6]
  26  Goto            0  27   0                    0
  27  Goto            0  28   0                    0
  28  Halt            0   0   0                    0
  29  Transaction     0   2   1                    0  iDb=0 tx_mode=Write
  30  String8         0   5   0  unnamed           0  r[5]='unnamed'
  31  Goto            0   1   0                    0
