sqlite/conformance/sqlite-sqltests/snapshot_tests/modifications/snapshots/modifications__insert-or-replace-multi-notnull-default.snap
---
source: modifications.sqltest
expression: INSERT OR REPLACE INTO t_defaults VALUES (1, 100, 'hello');
info:
  statement_type: INSERT
  setup_blocks:
  - notnull_defaults
  database: ':memory:'
---
QUERY PLAN


BYTECODE
addr  opcode         p1  p2  p3  p4               p5  comment
   0  Init            0  30   0                    0  Start at 30
   1  OpenWrite       0   2   0                    0  root=2; iDb=0
   2  Integer         1   2   0                    0  r[2]=1
   3  SoftNull        3   0   0                    0
   4  Integer       100   4   0                    0  r[4]=100
   5  String8         0   5   0  hello             0  r[5]='hello'
   6  Affinity        3   3   0                    0  r[3..6] = D, D, B
   7  NotNull         2   9   0                    0  r[2]!=NULL -> goto 9
   8  Goto            0  11   0                    0
   9  MustBeInt       2   0   0                    0
  10  Goto            0  12   0                    0
  11  NewRowid        0   2   0                    0  r[2]=rowid
  12  NotNull         4  15   0                    0  r[4]!=NULL -> goto 15
  13  Integer        42   4   0                    0  r[4]=42
  14  Affinity        4   1   0                    0  r[4..5] = D
  15  HaltIfNull   1299   0   4  t_defaults.val    0
  16  NotNull         5  19   0                    0  r[5]!=NULL -> goto 19
  17  String8         0   5   0  unnamed           0  r[5]='unnamed'
  18  Affinity        5   1   0                    0  r[5..6] = B
  19  HaltIfNull   1299   0   5  t_defaults.name   0
  20  NotExists       0  25   2                    0
  21  Copy            2   1   0                    0  r[1]=r[2]
  22  SeekRowid       0   1  29                    0  if (r[1]!=cursor 0 for table t_defaults.rowid) goto 29
  23  Delete          0   0   0  t_defaults        0
  24  Goto            0  25   0                    0
  25  MakeRecord      3   3   6                    0  r[6]=mkrec(r[3..5])
  26  Insert          0   6   2  t_defaults       66  intkey=r[2] data=r[6]
  27  Goto            0  28   0                    0
  28  Goto            0  29   0                    0
  29  Halt            0   0   0                    0
  30  Transaction     0   2   1                    0  iDb=0 tx_mode=Write
  31  Goto            0   1   0                    0
